--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ flask_app/flask_podcast/static/fonts/*
 simserver/*
 *.npy
 flask_app/flask_podcast/static/data/distance_matrix.npy
+.Rproj.user
+*.Rda
+.RData
+.Rhistory
